# project

./: .gitignore
project_quant/: 01_data_acquisition.ipynb  AFML_Ch2_Financial_Data_Structures.ipynb  README.md  key.json  leetcode_day1.ipynb  pdf-notes-studio.html
project_quant/book/: pdf-splitter.html
project_quant/leetcode/: lc_binary_search_window_sql.ipynb  lc_fast_slow_threesum.ipynb  lc_python_binary_search.ipynb  lc_python_sliding_window.ipynb  lc_python_stack_queue.ipynb  lc_sliding_window_4sum_sql.ipynb  (+5 more)
project_quant/quant-factor-mining/: 01_data_acquisition.ipynb  DAG_pipeline.py  IC_calculator.py  Untitled.ipynb  check_align.py  data_acquisition.py  factor_mining.py  get_sp500.py  main.py  output.txt  pyproject.toml  task_1.py  task_2.py  task_3.py  task_retry.py
project_quant/quant-factor-mining/.ipynb_checkpoints/: 01_data_acquisition-checkpoint.ipynb
project_quant/quant-factor-mining/airflow/: airflow-scheduler.err  airflow-scheduler.out  airflow.cfg  airflow.cfg.save  airflow.db  airflow.db-shm  airflow.db-wal  airflow.db-wal.REMOVED.git-id  simple_auth_manager_passwords.json.generated
project_quant/quant-factor-mining/airflow/dags/: DAG_pipeline.py
project_quant/quant-factor-mining/tmp/: CS_IC.parquet  TM_IC.parquet  close.parquet  factors.parquet  raw_data.parquet  sp500_tickers.json  volume.parquet
project_quant/quant-factor-mining/tmp/checkpoint/: batch_1.parquet  batch_10.parquet  batch_11.parquet  batch_2.parquet  batch_3.parquet  batch_4.parquet  batch_5.parquet  batch_6.parquet  batch_7.parquet  batch_8.parquet  batch_9.parquet
(+6 files in other folders)
